name:                UnderstandingMonads
version:             0.0.0.1
synopsis:            Project to play with Functor, Applicative and Monad
description:         Please see README.md
homepage:            https://github.com/EduardoGR/UnderstandingMonads
license:             GPL-3.0
license-file:        LICENSE
author:              Eduardo Garcia Ruiz
maintainer:          garciaruiz.edu@gmail.com
copyright:           2018, Eduardo Garcia Ruiz
category:            Learning
build-type:          Simple
cabal-version:       >=1.10

Extra-Source-Files:
    -- documentation
    README.md
    doc/
    -- tests
    testsuite/understandingmonads.hs

  library
    hs-source-dirs: src
    build-depends:
      base >= 4 && < 5,
      UnderstandingMonads
    exposed-modules:
      UnderstandingMonads.Functor.MaybeFuncto
      UnderstandingMonads.Applicative.ListApplicative
      UnderstandingMonads.Applicative.MaybeApplicative
      UnderstandingMonads.Monad.ListMonad
      UnderstandingMonads.Monad.MaybeMonad
      UnderstandingMonads.Monad.StackMonad
      UnderstandingMonads.Monad.While

  test-suite koans
    build-depends:
      base >= 4 && < 5,
      UnderstandingMonads,
      HUnit
    main-is: testsuite/TestSuite.hs
